setups/sidecar-istio/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-server
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: http-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: http-server
    spec:
      shareProcessNamespace: true
      containers:
        - name: http-server
          image: "${REGISTRY}/http-server"
          resources:
            requests:
              cpu: 2000m
              memory: 2000Mi
            limits:
              cpu: 2000m
              memory: 2000Mi
        - name: ubuntu
          image: "${REGISTRY}/perf-ubuntu"
          command: ["/bin/sleep"]
          args: ["1000d"]
          securityContext:
            privileged: true
          resources:
            requests:
              cpu: 2000m
              memory: 2000Mi
            limits:
              cpu: 2000m
              memory: 2000Mi
---
apiVersion: v1
kind: Service
metadata:
  name: http-server
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app.kubernetes.io/name: http-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-service
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: demo-service
  template:
    metadata:
      labels:
        app.kubernetes.io/name: demo-service
    spec:
      shareProcessNamespace: true
      containers:
        - name: demo-service
          image: "${REGISTRY}/demo-service"
          resources:
            requests:
              cpu: 2000m
              memory: 2000Mi
            limits:
              cpu: 2000m
              memory: 2000Mi
        - name: ubuntu
          image: "${REGISTRY}/perf-ubuntu"
          command: ["/bin/sleep"]
          args: ["1000d"]
          securityContext:
            privileged: true
          resources:
            requests:
              cpu: 2000m
              memory: 2000Mi
            limits:
              cpu: 2000m
              memory: 2000Mi
---
apiVersion: v1
kind: Service
metadata:
  name: demo-service
spec:
  ports:
  - name: grpc
    port: 7070
    targetPort: 7070
    protocol: TCP
  selector:
    app.kubernetes.io/name: demo-service
